# caselaw-mcp-server

./: .gitignore  README.md  pyproject.toml  run.py
app/: config.py  main.py
app/adapters/: __init__.py  base.py  caseopen.py  mock.py
app/routers/: cases.py  mcp.py
app/schemas/: case.py
app/services/: case_service.py
app/utils/: logging.py
tests/: test_api.py
